--- a/sass/_abstracts.sass
+++ b/sass/_abstracts.sass
@@ -1,10 +1,10 @@
 // MEDIA FOR MOBILE FIRST
-@mixin respond-tablet
-	@media (min-width: 767px)
+@mixin tablet
+	@media screen and (min-width: 767px)
 		@content
 
-@mixin respond-desktop
-	@media (min-width: 1024px)
+@mixin desktop
+	@media screen and (min-width: 1023px)
 		@content
 
 // COLORS
